force-app/main/default/objects/tc9_pr__Payee_Withholding__c/tc9_pr__Payee_Withholding__c.object-meta.xml
<CustomObject>
    <label>Payee Withholding</label>
    <nameField>
        <displayFormat>PW-{0000000000}</displayFormat>
        <label>Payee Withholding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Withholdings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>