force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_eau__Lodgement_Item_AU__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Lodgement_Item_AU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lodgement Item AU</label>
    <referenceTo>tc9_eau__Lodgement_Item_AU__c</referenceTo>
    <relationshipLabel>Payee Withholdings</relationshipLabel>
    <relationshipName>Payee_Withholdings</relationshipName>
    <type>Lookup</type>
</CustomField>