force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__ABN__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABN__c</fullName>
    <description>Australian Business Number of the contractor company</description>
    <inlineHelpText>Australian Business Number of the contractor company</inlineHelpText>
    <label>ABN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>