force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Additional_Week_Fortnight__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Additional_Week_Fortnight__c</fullName>
    <description>Indicates that the payee has elected to pay additional tax, as per ATO schedule, where there is an additional week or fortnight in the year</description>
    <inlineHelpText>Indicates that the payee has elected to pay additional tax, as per ATO schedule, where there is an additional week or fortnight in the year</inlineHelpText>
    <label>Additional Week/Fortnight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>