force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Approved_Working_Holiday_Maker__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Approved_Working_Holiday_Maker__c</fullName>
    <description>Indicates whether the payee is an approved Working Holiday Maker working for an approved employer</description>
    <inlineHelpText>Indicates whether the payee is an approved Working Holiday Maker working for an approved employer</inlineHelpText>
    <label>Approved Working Holiday Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>