force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__AU_Tax_Scale__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Tax_Scale__c</fullName>
    <description>Derived Tax Scale for AU PAYG calculation</description>
    <inlineHelpText>Derived Tax Scale for AU PAYG calculation</inlineHelpText>
    <label>AU Tax Scale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>