force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Australian_Resident__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Australian_Resident__c</fullName>
    <description>Indicates whether the payee is an Australian Resident for PAYG purposes</description>
    <inlineHelpText>Indicates whether the payee is an Australian Resident for PAYG purposes</inlineHelpText>
    <label>Australian Resident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>