force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Basis_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Basis_of_Payment__c</fullName>
    <description>The type of arrangement between the payer and the payee.</description>
    <inlineHelpText>The type of arrangement between the payer and the payee.</inlineHelpText>
    <label>Basis of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Basis_of_Payment</valueSetName>
    </valueSet>
</CustomField>