force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_CIty__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_CIty__c</fullName>
    <description>Business city</description>
    <inlineHelpText>Business city</inlineHelpText>
    <label>Business CIty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>