force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_Country__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_Country__c</fullName>
    <description>Business country</description>
    <inlineHelpText>Business country</inlineHelpText>
    <label>Business Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>