force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_Email__c</fullName>
    <description>Business email address</description>
    <inlineHelpText>Business email address</inlineHelpText>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>