force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_Name__c</fullName>
    <description>Registered Business Name of the contractor company</description>
    <inlineHelpText>Registered Business Name of the contractor company</inlineHelpText>
    <label>Business Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>