force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_State_Province__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_State_Province__c</fullName>
    <description>Business state/province</description>
    <inlineHelpText>Business state/province</inlineHelpText>
    <label>Business State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>