force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_Street__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_Street__c</fullName>
    <description>Business street address</description>
    <inlineHelpText>Business street address</inlineHelpText>
    <label>Business Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>