force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Business_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Business_Zip_Postal_Code__c</fullName>
    <description>Business zip/postal code</description>
    <inlineHelpText>Business zip/postal code</inlineHelpText>
    <label>Business Zip/Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>