force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Claim_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Claim_Tax_Free__c</fullName>
    <description>Indicates whether the payee wishes to claim the ATO allowable tax free threshold</description>
    <inlineHelpText>Indicates whether the payee wishes to claim the ATO allowable tax free threshold</inlineHelpText>
    <label>Claim Tax Free</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>