force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Country_of_Visa_Work__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Country_of_Visa_Work__c</fullName>
    <description>The home country for WHM &amp; IAA or country of work for FEI.</description>
    <inlineHelpText>The home country for WHM &amp; IAA or country of work for FEI.</inlineHelpText>
    <label>Country of Visa/Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Country_Picklists</valueSetName>
    </valueSet>
</CustomField>