force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Defined_Benefit_Salary__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Defined_Benefit_Salary__c</fullName>
    <description>The annual salary on which defined benefit contributions will be calculated.</description>
    <inlineHelpText>The annual salary on which defined benefit contributions will be calculated.</inlineHelpText>
    <label>Defined Benefit Salary</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>