force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Distribution_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Distribution_Fixed_Amount__c</fullName>
    <description>Any fixed amount to be applied during superannuation distribution across multiple funds</description>
    <inlineHelpText>Any fixed amount to be applied during superannuation distribution across multiple funds</inlineHelpText>
    <label>Distribution Fixed Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>