force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Distribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Distribution_Percentage__c</fullName>
    <description>Any percentage amount to be applied during superannuation distribution across multiple funds.</description>
    <inlineHelpText>Any percentage amount to be applied during superannuation distribution across multiple funds.</inlineHelpText>
    <label>Distribution Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>