force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Distribution_Type__c</fullName>
    <description>Where Fixed Amount is selected, funds will be distributed to the value defined in the Fixed Amount field.
Where Percentage is selected, funds remaining percentage rate defined in the Percentage field.
Where Balance is selected all unallocated funds will be allocated.</description>
    <inlineHelpText>For Fixed Amount, funds will be distributed to the value defined in the Fixed Amount field.
For Percentage, funds remaining percentage rate defined in the Percentage field.For Balance, all unallocated funds will be allocated.</inlineHelpText>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Distribution_Type</valueSetName>
    </valueSet>
</CustomField>