force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The start date of this record</description>
    <inlineHelpText>The start date of this record</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>