force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Employee.</description>
    <inlineHelpText>The related Employee.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payee Withholdings</relationshipLabel>
    <relationshipName>Payee_Withholdings</relationshipName>
    <type>Lookup</type>
</CustomField>