force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Employee_Influenced_Super_Variation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee_Influenced_Super_Variation__c</fullName>
    <description>Indicates whether the payee influenced a higher rate of employer Superannuation. If &apos;Yes&apos; is selected any employer superannuation above the standard rate will be calculated separately and reported as RESC.</description>
    <inlineHelpText>If the field is left blank, the Employer Contribution will report in the SGC field for SuperStream Reports, however if it is populated with &apos;No&apos; the amount will report in the Award field for Superstream Reports. If populated with &apos;Yes&apos; it will report in the RESC field for Superstream Reporting.</inlineHelpText>
    <label>Employee Influenced Super Variation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Employee_Influenced_Super_Variation</valueSetName>
    </valueSet>
</CustomField>