force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Excess_SGC_Action__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Excess_SGC_Action__c</fullName>
    <description>Determines how 2cloudnine Payroll will process excess employer superannuation contributions during payrun calculation</description>
    <inlineHelpText>Determines how 2cloudnine Payroll will process excess employer superannuation contributions during payrun calculation</inlineHelpText>
    <label>Excess SGC Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>