force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expiry_Date__c</fullName>
    <description>The end date of this record</description>
    <inlineHelpText>The end date of this record</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>