force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__GST_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__GST_Exempt__c</fullName>
    <description>Indicates that the contractor is GST exempt</description>
    <inlineHelpText>Indicates that the contractor is GST exempt</inlineHelpText>
    <label>GST Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>