force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__GST_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__GST_Exempt_Reason__c</fullName>
    <description>GST exempt reason</description>
    <inlineHelpText>GST exempt reason</inlineHelpText>
    <label>GST Exempt Reason</label>
    <type>TextArea</type>
</CustomField>