force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Maximum_Super_Contribution_Base__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Maximum_Super_Contribution_Base__c</fullName>
    <description>Where an amount is entered this overrides the maximum super contribution base on the Withholding Rule Item.</description>
    <inlineHelpText>Where an amount is entered this overrides the maximum super contribution base on the Withholding Rule Item.</inlineHelpText>
    <label>Maximum Super Contribution Base</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>