force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Medicare_Levy_Exemption__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Medicare_Levy_Exemption__c</fullName>
    <description>Indicates whether the payee has provided an ATO declaration and which type of Medicare Levy Exemption being claimed</description>
    <inlineHelpText>Indicates whether the payee has provided an ATO declaration and which type of Medicare Levy Exemption being claimed</inlineHelpText>
    <label>Medicare Levy Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>