force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Minimum_Monthly_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Minimum_Monthly_Earnings__c</fullName>
    <description>Where an amount is entered this overrides the minimum monthly earnings on the Withholding Rule Item</description>
    <inlineHelpText>Where an amount is entered this overrides the minimum monthly earnings on the Withholding Rule Item</inlineHelpText>
    <label>Minimum Monthly Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>