force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__No_TFN_Apply_Higher_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__No_TFN_Apply_Higher_Rate__c</fullName>
    <description>When &apos;Yes&apos; is selected the highest ATO tax rate will be applied based on current tax scales</description>
    <inlineHelpText>When &apos;Yes&apos; is selected the highest ATO tax rate will be applied based on current tax scales</inlineHelpText>
    <label>No TFN Apply Higher Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>