force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Override_Minimum_Age_Requirement__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Minimum_Age_Requirement__c</fullName>
    <description>Override the minimum age and working hours requirements for superannuation to be calculated.</description>
    <inlineHelpText>Override the minimum age and working hours requirements for superannuation to be calculated.</inlineHelpText>
    <label>Override Minimum Age Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>