force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Pay_Batch_Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Pay Batch Event</description>
    <inlineHelpText>A lookup to the related Pay Batch Event</inlineHelpText>
    <label>Pay Batch Event</label>
    <referenceTo>tc9_pr__Pay_Batch_Event__c</referenceTo>
    <relationshipName>Payee_Withholdings</relationshipName>
    <type>Lookup</type>
</CustomField>