force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Pay_Batch_Event_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Event_Processing_Status__c</fullName>
    <description>The processing status of the related Pay Batch Event.</description>
    <formula>Text(tc9_pr__Pay_Batch_Event__r.tc9_pr__Processing_Status__c)</formula>
    <inlineHelpText>The processing status of the related Pay Batch Event.</inlineHelpText>
    <label>Pay Batch Event Processing Status</label>
    <type>Text</type>
</CustomField>