force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee.</description>
    <inlineHelpText>The related Payee.</inlineHelpText>
    <label>Payee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Payee record selected on the Payee Withholding record must have the same Contact as the Payee Withholding record</errorMessage>
        <filterItems>
            <field>tc9_pr__Payee__c.tc9_pr__Employee__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.tc9_pr__Employee__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Payee Withholdings</relationshipLabel>
    <relationshipName>Payee_Withholdings</relationshipName>
    <type>Lookup</type>
</CustomField>