force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__PAYG_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Exempt_Reason__c</fullName>
    <description>PAYG exempt reason</description>
    <inlineHelpText>PAYG exempt reason</inlineHelpText>
    <label>PAYG Exempt Reason</label>
    <type>TextArea</type>
</CustomField>