force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Payroll_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Exempt__c</fullName>
    <description>Indicates that the payee is exempt from Australian Payroll Tax</description>
    <label>Payroll Tax Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>