force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Payroll_Tax_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Exempt_Reason__c</fullName>
    <description>The reason why this payee is exempt from Australian Payroll Tax</description>
    <label>Payroll Tax Exempt Reason</label>
    <type>TextArea</type>
</CustomField>