force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Payroll_Tax_Locality__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Locality__c</fullName>
    <description>The payee’s locality for the purpose of Australian Payroll Tax reporting</description>
    <label>Payroll Tax Locality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__AU_Payroll_Tax_Localities</valueSetName>
    </valueSet>
</CustomField>