force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Previous_Employment_PAYE__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Previous_Employment_PAYE__c</fullName>
    <description>Previous Employment PAYE Paid from P45/P6.</description>
    <inlineHelpText>Previous Employment PAYE Paid from P45/P6.</inlineHelpText>
    <label>Previous Employment PAYE</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>