force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Reason_TFN_Not_Provided__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Reason_TFN_Not_Provided__c</fullName>
    <description>ATO approved reason why this Payee has not provided a tax file number</description>
    <inlineHelpText>ATO approved reason why this Payee has not provided a tax file number</inlineHelpText>
    <label>Reason TFN Not Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No TFN quoted</fullName>
            </value>
            <value>
                <fullName>TFN applied for but not received</fullName>
            </value>
            <value>
                <fullName>Employee is under 18</fullName>
            </value>
            <value>
                <fullName>Employee has claimed an exemption from providing a TFN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>