force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Seniors_Offset__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Seniors_Offset__c</fullName>
    <description>Indicates whether the payee wishes to claim a Seniors offset</description>
    <inlineHelpText>Indicates whether the payee wishes to claim a Seniors offset</inlineHelpText>
    <label>Seniors Offset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Separated by Illness</fullName>
            </value>
            <value>
                <fullName>Member of a Couple</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>