force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__SFSS__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__SFSS__c</fullName>
    <description>Indicates whether the payee wishes to make SFSS repayments to the ATO via their PAYG withholding</description>
    <inlineHelpText>Indicates whether the payee wishes to make SFSS repayments to the ATO via their PAYG withholding</inlineHelpText>
    <label>SFSS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>