force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Sort_Order__c</fullName>
    <description>The order in which contributions will be applied where a payee distributes their superannuation across more than one fund.</description>
    <inlineHelpText>The order in which contributions will be applied where a payee distributes their superannuation across more than one fund.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>