force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__STSL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STSL__c</fullName>
    <description>Indicates whether the payee wishes to make STSL repayments to the ATO via their PAYG withholding.</description>
    <inlineHelpText>Indicates whether the payee wishes to make STSL repayments to the ATO via their PAYG withholding.</inlineHelpText>
    <label>STSL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>