force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Super_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Exempt__c</fullName>
    <description>Indicates that the payee is exempt from employer SGC calculation</description>
    <inlineHelpText>Indicates that the payee is exempt from employer SGC calculation</inlineHelpText>
    <label>Super Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>