force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Super_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Exempt_Reason__c</fullName>
    <description>Description of why this payee is super exempt</description>
    <inlineHelpText>Description of why this payee is super exempt</inlineHelpText>
    <label>Super Exempt Reason</label>
    <type>TextArea</type>
</CustomField>