force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Super_Fund_Allocated_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Fund_Allocated_Percentage__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Super Fund Allocated Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>