force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Super_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Membership_Number__c</fullName>
    <description>The membership number of this payee to their superannuation fund.</description>
    <inlineHelpText>The membership number of this payee to their superannuation fund.</inlineHelpText>
    <label>Super Membership Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>