force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Super_Variation_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Variation_Amount__c</fullName>
    <description>Where a super variation amount is in operation this overrides the superannuation rate set on the Withholding Rule Item.</description>
    <inlineHelpText>Where a super variation amount is in operation this overrides the superannuation rate set on the Withholding Rule Item.</inlineHelpText>
    <label>Super Variation Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>