force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Super_Variation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Variation_Percentage__c</fullName>
    <description>Where a super variation percentage is in operation this overrides the superannuation rate set on the Withholding Rule Item.</description>
    <inlineHelpText>Where a super variation percentage is in operation this overrides the superannuation rate set on the Withholding Rule Item.</inlineHelpText>
    <label>Super Variation Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>